[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Scripts/Network/Login.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/visitor1.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Scripts/ChooseCharacter.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]

size = 10
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Welcome" type="Node"]

script = ExtResource( 1 )

[node name="Home" type="Node2D" parent="." index="0"]

position = Vector2( -361.555, -9.70161 )
scale = Vector2( 1.3, 1 )
_sections_unfolded = [ "Transform" ]

[node name="WelcomeText" type="Label" parent="Home" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 660.0
margin_top = 190.0
margin_right = 753.0
margin_bottom = 233.0
rect_scale = Vector2( 5, 5 )
rect_pivot_offset = Vector2( 85, 5.52036 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Welcome to Project Haven"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="WelcomeText2" type="Label" parent="Home" index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 535.0
margin_top = 124.0
margin_right = 632.0
margin_bottom = 157.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 85, 5.52036 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Logging in could take a moment..."
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="SendButton" type="Button" parent="Home" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 510.0
margin_top = 99.0
margin_right = 652.0
margin_bottom = 144.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Login"
flat = false
align = 1

[node name="Email" type="LineEdit" parent="Home" index="3"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 460.0
margin_top = 26.0
margin_right = 704.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[node name="username" type="Label" parent="Home/Email" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -41.0
margin_top = 4.0
margin_right = 25.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Email"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Password" type="LineEdit" parent="Home" index="4"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 459.0
margin_top = 57.0
margin_right = 703.0
margin_bottom = 81.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
secret = true
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[node name="password" type="Label" parent="Home/Password" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -68.0
margin_top = 4.0
margin_right = -8.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Password"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="NewAccountButton" type="Button" parent="Home" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 508.0
margin_top = 435.0
margin_right = 650.0
margin_bottom = 480.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Create Account"
flat = false
align = 1

[node name="DevLogin" type="Button" parent="Home" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 510.0
margin_top = 153.0
margin_right = 652.0
margin_bottom = 198.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "DevLogin"
flat = false
align = 1

[node name="ChooseCharacter" type="Node2D" parent="." index="1"]

editor/display_folded = true
visible = false
position = Vector2( -128.153, -27.4483 )
scale = Vector2( 1.3, 1 )
script = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="ChooseText" type="Label" parent="ChooseCharacter" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 395.0
margin_top = 28.0
margin_right = 521.0
margin_bottom = 46.0
rect_scale = Vector2( 4.7, 5 )
rect_pivot_offset = Vector2( 85, 5.52036 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Choose your Character"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="NewCharacter?" type="Node2D" parent="ChooseCharacter" index="1"]

visible = false
position = Vector2( -0.565483, 13.9665 )

[node name="NameLine" type="LineEdit" parent="ChooseCharacter/NewCharacter?" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 522.0
margin_top = 207.0
margin_right = 694.0
margin_bottom = 231.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[node name="NameLabel" type="Label" parent="ChooseCharacter/NewCharacter?/NameLine" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -41.0
margin_top = 4.0
margin_right = 25.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Name"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Make" type="Button" parent="ChooseCharacter/NewCharacter?" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 535.0
margin_top = 244.0
margin_right = 677.0
margin_bottom = 289.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "New Character"
flat = false
align = 1

[node name="NewButton" type="Button" parent="ChooseCharacter" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 319.0
margin_top = 422.0
margin_right = 461.0
margin_bottom = 467.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "New Character"
flat = false
align = 1

[node name="Char1" type="Button" parent="ChooseCharacter" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 320.0
margin_top = 154.0
margin_right = 462.0
margin_bottom = 199.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "None"
flat = false
align = 1

[node name="Char2" type="Button" parent="ChooseCharacter" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 319.0
margin_top = 206.0
margin_right = 461.0
margin_bottom = 251.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "None"
flat = false
align = 1

[node name="Char3" type="Button" parent="ChooseCharacter" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 319.0
margin_top = 260.0
margin_right = 461.0
margin_bottom = 305.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "None"
flat = false
align = 1

[node name="Char4" type="Button" parent="ChooseCharacter" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 319.0
margin_top = 313.0
margin_right = 461.0
margin_bottom = 358.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "None"
flat = false
align = 1

[node name="Char5" type="Button" parent="ChooseCharacter" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 319.0
margin_top = 367.0
margin_right = 461.0
margin_bottom = 412.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "None"
flat = false
align = 1

[node name="NewAccount" type="Node2D" parent="." index="2"]

editor/display_folded = true
visible = false
position = Vector2( -125.392, -146.136 )
scale = Vector2( 1.3, 1.3 )
_sections_unfolded = [ "Transform" ]

[node name="CancelNewAccount" type="Button" parent="NewAccount" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 326.0
margin_top = 349.0
margin_right = 468.0
margin_bottom = 394.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Cancel"
flat = false
align = 1

[node name="Email2" type="LineEdit" parent="NewAccount" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 268.0
margin_top = 127.0
margin_right = 550.0
margin_bottom = 151.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[node name="email" type="Label" parent="NewAccount/Email2" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -37.0
margin_top = 5.0
margin_right = 29.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Email"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Password2" type="LineEdit" parent="NewAccount" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 268.0
margin_top = 157.0
margin_right = 550.0
margin_bottom = 181.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
secret = true
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[node name="password" type="Label" parent="NewAccount/Password2" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -62.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Password"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="VerifyPassword" type="LineEdit" parent="NewAccount" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 267.0
margin_top = 189.0
margin_right = 549.0
margin_bottom = 213.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
secret = true
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[node name="password2" type="Label" parent="NewAccount/VerifyPassword" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -102.0
margin_top = 4.0
margin_right = -2.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Verify Password"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SubmitButton" type="Button" parent="NewAccount" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 327.0
margin_top = 224.0
margin_right = 469.0
margin_bottom = 269.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Submit"
flat = false
align = 1

[connection signal="pressed" from="Home/SendButton" to="." method="_on_SendButton_pressed"]

[connection signal="pressed" from="Home/NewAccountButton" to="." method="_on_NewAccountButton_pressed"]

[connection signal="pressed" from="Home/DevLogin" to="." method="_on_DevLogin_pressed"]

[connection signal="pressed" from="ChooseCharacter/NewCharacter?/Make" to="ChooseCharacter" method="_on_Make_pressed"]

[connection signal="pressed" from="ChooseCharacter/NewButton" to="ChooseCharacter" method="_on_NewButton_pressed"]

[connection signal="pressed" from="ChooseCharacter/Char1" to="ChooseCharacter" method="_on_Char1_pressed"]

[connection signal="pressed" from="ChooseCharacter/Char2" to="ChooseCharacter" method="_on_Char2_pressed"]

[connection signal="pressed" from="ChooseCharacter/Char3" to="ChooseCharacter" method="_on_Char3_pressed"]

[connection signal="pressed" from="ChooseCharacter/Char4" to="ChooseCharacter" method="_on_Char4_pressed"]

[connection signal="pressed" from="ChooseCharacter/Char5" to="ChooseCharacter" method="_on_Char5_pressed"]

[connection signal="pressed" from="NewAccount/CancelNewAccount" to="." method="_on_CancelNewAccount_pressed"]

[connection signal="pressed" from="NewAccount/SubmitButton" to="." method="_on_SubmitButton_pressed"]


